--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css?v=2">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Surface</title>
@@ -21,9 +21,8 @@
                     </g>
                 </svg>              
             </a>
-            <div class="slogan-container">
-                <h1 class="slogan first-slogan">be recruited</h1>
-                <h1 class="slogan second-slogan">play college sports</h1>
+            <div>
+                <h1 class="slogan-container slogan first-slogan">be recruited <span class="second-slogan">play college sports</span></h1>
             </div>
             <div class="app-link-container">
                 <a class="app-link app-link-first" href="#1">
